<resources>
    <string name="app_name">COWR</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="capture_button">Click to capture photo</string>
    <string name="desc">Capture image holder</string>
    <string name="hot">Madd Hot</string>
    <string name="warm">Perfect Weather</string>
    <string name="cold">Colddd</string>
    <string name="top">Top</string>
    <string name="bottom">Bottom</string>
    <string name="freezing">Super Chillly</string>
    <string name="title_activity_listview">listview</string>
    <string name="_100_f"><![CDATA[>100°F]]></string>
    <string name="_0_f"><![CDATA[<0°F]]></string>
    <string name="freez">Freezing</string>
    <string name="Open">Open</string>
    <string name="Close">Close</string>
    <string name="fetch_location">Fetch Location</string>
</resources>