<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"

    android:gravity="center_horizontal"

    android:layout_margin="0dp"

    android:layout_height="match_parent">


    <Button

        android:id="@+id/take_image_from_camera"

        android:layout_width="wrap_content"

        android:layout_height="wrap_content"

        android:layout_centerHorizontal="true"

        android:layout_marginTop="10dp"

        android:onClick="takeImageFromCamera"
        android:text="Take Photo From Camera" />


    <ImageView

        android:id="@+id/image_from_camera"

        android:layout_width="192dp"


        android:layout_height="171dp"

        android:layout_below="@+id/take_image_from_camera"
        android:layout_alignParentStart="true"

        android:layout_alignParentEnd="true"
        android:layout_marginStart="96dp"
        android:layout_marginTop="7dp"
        android:layout_marginEnd="96dp"
        android:background="@color/colorPrimary" />


    <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="wrap_content"
        android:layout_height="155dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="68dp"
        android:layout_marginBottom="107dp"
        android:gravity="center_vertical"
        android:orientation="vertical">

        <RadioButton
            android:id="@+id/warm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onRadioButtonClicked"
            android:text="@string/hot" />

        <RadioButton
            android:id="@+id/hot"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onRadioButtonClicked"
            android:text="@string/warm" />

        <RadioButton
            android:id="@+id/cold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onRadioButtonClicked"
            android:text="@string/cold" />

        <RadioButton
            android:id="@+id/freezing"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onRadioButtonClicked"
            android:text="@string/freezing" />
    </RadioGroup>

    <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="118dp"
        android:layout_height="155dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="237dp"
        android:layout_marginEnd="29dp"
        android:layout_marginBottom="110dp"
        android:gravity="center_vertical"
        android:orientation="vertical">

        <RadioButton
            android:id="@+id/top"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="RadioClick"
            android:text="@string/top" />

        <RadioButton
            android:id="@+id/bottom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="RadioClick"
            android:text="@string/bottom" />


    </RadioGroup>
    <Button
        android:id="@+id/save"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/myclothes"
        android:layout_alignParentStart="true"
        android:onClick="SaveClothing"
        android:text="Save Clothing" />

    <Button
        android:id="@+id/myclothes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:onClick="MyClothes"
        android:text="My Clothes" />


</RelativeLayout>
